--- a/src/static_files/base/css/base.css
+++ b/src/static_files/base/css/base.css
@@ -28,7 +28,9 @@
     --color-text: #86868B;
     --color-bold: #5B5B61;
     --color-title: #1D1D1F;
-    --color-link: #0066CC;
+    --color-link: #1564b3;
+
+    color: var(--color-text); 
 
     --br: 7px;
     --br-dynamic: 0px;
@@ -37,9 +39,15 @@
 
     --navigation-transitoin: 0.2s;
 
+    /* review */
     --m-block-paddings: 20px 16px;
     --m-block-paddings-sides: 0 16px;
     --m-block-paddings-big: 35px 16px;
+
+    --margin-1: 20px;
+    --margin-2: 15px;
+    --margin-3: 10px;
+
 } 
 body {
     background: var(--bg-general);
@@ -54,12 +62,13 @@ b {
 }
 a {
     color: var(--color-link);
+    font-weight: 400;
     text-decoration: none;
 }
 h1, h2, h3, h4, h5, h6 {
     color: var(--color-title);
     font-weight: 600;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 h1 {
     font-size: 40px; 
@@ -72,7 +81,7 @@ h3 {
 } 
 h4 {
     font-size: 23px; 
-    margin-bottom: 15px;
+    margin-bottom: 15px; 
 }
 h5 {
     font-size: 20px; 
@@ -194,6 +203,11 @@ h6 {
     min-width: 100%;
     height: 100%;
 }
+.img-fix {
+    width: 100%;
+    display: block;
+    border-radius: var(--br-dynamic);
+}
 
 /* basis set up */
 .wrapper {
@@ -203,7 +217,7 @@ h6 {
     height: 100vh;
 } 
 section{
-    margin-bottom: 100px;
+    margin-bottom: 40px;
 }
 .centralize {
     display: flex;
@@ -224,6 +238,11 @@ section{
 }
 
 .mobile-space {
+    margin-left: 16px;
+    margin-right: 16px;
+}
+
+.mobile-space-block {
     margin-left: 16px;
     margin-right: 16px;
 }
@@ -403,6 +422,10 @@ footer {
     .mobile-space {
         margin-left: 0;
         margin-right: 0;
+    }
+    .mobile-space-block {
+        margin-left: 0px;
+        margin-right: 0px;
     }
 
     /* navigation */
